# Proyecto_programacionSIG

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml
data/01_raw/labeled_points/: Datos_Entrenamiento.dbf  Datos_Entrenamiento.sbn  Datos_Entrenamiento.sbx  Datos_Entrenamiento.shp  Datos_Entrenamiento.shx  (+1 more)
data/03_primary/: planetscope_samples.csv  sentinel_samples.csv
data/05_model_input/: testing_labeled_points.csv  testing_sentinel2_features.csv  training_labeled_points.csv  training_sentinel2_features.csv
docs/: proyecto_final.html  proyecto_final.qmd  referencias.bib
src/centromonitoreo_mineria/: __init__.py  pipeline_registry.py  settings.py
src/sat_mining_kedro/: __init__.py  pipeline_registry.py  settings.py
tests/: test_smoke.py
tests/analyze_sentinel2_pca/: test_analyze_sentinel2_pca_pipeline.py
tests/download_sentinel2/: test_download_sentinel2_pipeline.py
tests/extract_sentinel2_training_features/: test_extract_sentinel2_training_features_pipeline.py
tests/postprocess_mining_binary_map/: test_postprocess_mining_binary_map_pipeline.py
tests/predict_mining_binary_map/: test_predict_mining_binary_map_pipeline.py
tests/sentinel2_spectral_indices/: test_sentinel2_spectral_indices_pipeline.py
tests/train_mining_binary_rf/: test_train_mining_binary_rf_pipeline.py
tests/validate_mining_binary_map/: test_validate_mining_binary_map_pipeline.py
tests/validate_postprocessed_mining_map/: test_validate_postprocessed_mining_map_pipeline.py
(+187 files in other folders)
